bootstrap/kubernetes/apps/media/bazarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: bazarr
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      run: bazarr
  template:
    metadata:
      labels:
        run: bazarr
      annotations: {}
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000
        volumeMounts:
          - mountPath: /htpc
            name: htpc-home
      containers:
        - env:
            - name: TZ
              value: Pacific/Auckland
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
          image: linuxserver/bazarr:1.6.3-development
          name: bazarr
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 50m
              memory: 280Mi
          ports:
            - containerPort: 6767
              name: webui
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
