bootstrap/kubernetes/apps/media/bazarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 6767
      name: webui
  selector:
    run: bazarr
